--- a/src/components/CSS/header.css
+++ b/src/components/CSS/header.css
@@ -88,7 +88,10 @@ justify-content: space-between;
     align-items: center;
 }
 .box-left, .box-right{
-    width: 15%;
+    width: 20%;
+}
+.box-right{
+    width: 25%;
 }
 .burger-menu{
     display: none;
@@ -163,10 +166,9 @@ justify-content: space-between;
         justify-content: space-around;
     }
 }
-@media  screen and (max-width: 800px) {
+@media  screen and (max-width: 990px) {
     .box-right{
-        width: 30%;
-        padding-left: 40%;
+        width: 50%;
     }
    .box-middle{display: none;} 
    .burger-menu{
@@ -179,7 +181,7 @@ justify-content: space-between;
     padding: 0;
 }
 }
-@media screen and (max-width: 370px){
+@media screen and (max-width: 420px){
    .log-in{
     display: none;
    } 
