--- a/src/components/CSS/footer.css
+++ b/src/components/CSS/footer.css
@@ -68,6 +68,7 @@ footer .title{
   .footer-columns{
     width: 80%;
     text-align: center;
+    align-items: center;
     margin-bottom: 20px;
     margin-top: 20px;
   }  
