--- a/src/components/CSS/header.css
+++ b/src/components/CSS/header.css
@@ -6,6 +6,12 @@ header{
     align-items: center;
     border-bottom: 2px solid #67317e;
 }
+.logo a img{
+    width: 50px;
+    height: 30px;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(320deg) brightness(102%) contrast(101%);
+
+}
 .active{
     color: var(--accent) ;
 }
